--- a/src/main/resources/templates/employee/manager/clients/addClient.html
+++ b/src/main/resources/templates/employee/manager/clients/addClient.html
@@ -9,7 +9,7 @@
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/javascript.js"></script>
 </head>
-<body class="edit-page">
+<body>
 <header th:insert="~{blocks/header :: header}"></header>
 <div class="container my-5">
     <div class="row justify-content-center">
