--- a/src/main/resources/templates/employee/manager/products/detailsProduct.html
+++ b/src/main/resources/templates/employee/manager/products/detailsProduct.html
@@ -8,7 +8,7 @@
     <link href="/css/style.css" rel="stylesheet">
     <script src="/js/bootstrap.bundle.min.js"></script>
 </head>
-<body class="edit-page">
+<body>
 <header th:insert="~{blocks/header :: header}"></header>
 <div class="container my-5">
     <div class="row justify-content-center">
