Implement request-for-delivery workflow for warehouse manager, director and accounter

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -68,6 +68,13 @@
                         </a>
                     </li>
 
+
+                    <li class="nav-item" sec:authorize="hasRole('ROLE_EMPLOYEE_MANAGER')">
+                        <a class="nav-link px-3" href="/employee/manager/requestsForDelivery/allRequestsForDelivery">
+                            Заявки на поставку
+                        </a>
+                    </li>
+
                     <li class="nav-item" sec:authorize="hasRole('ROLE_EMPLOYEE_WAREHOUSE_MANAGER')">
                         <a class="nav-link px-3" href="/employee/warehouseManager/globalProductCategories/allGlobalProductCategories">
                             Глобальные категории
@@ -89,6 +96,20 @@
                     <li class="nav-item" sec:authorize="hasRole('ROLE_EMPLOYEE_WAREHOUSE_MANAGER')">
                         <a class="nav-link px-3" href="/employee/warehouseManager/products/allProducts">
                             Товары
+                        </a>
+                    </li>
+
+
+                    <li class="nav-item" sec:authorize="hasRole('ROLE_EMPLOYEE_WAREHOUSE_MANAGER')">
+                        <a class="nav-link px-3" href="/employee/warehouseManager/requestsForDelivery/allRequestsForDelivery">
+                            Заявки на поставку
+                        </a>
+                    </li>
+
+
+                    <li class="nav-item" sec:authorize="hasRole('ROLE_EMPLOYEE_ACCOUNTER')">
+                        <a class="nav-link px-3" href="/employee/accounter/requestsForDelivery/allRequestsForDelivery">
+                            Заявки на поставку
                         </a>
                     </li>
 
