--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -87,6 +87,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/employee/manager/clientOrders/allClientOrders">Все заказы</a></li>
                             <li><a class="dropdown-item" href="/employee/manager/clientOrders/createClientOrder">Создать заказ</a></li>
+                            <li><a class="dropdown-item" href="/employee/manager/deliveryTasks/allDeliveryTasks">Задачи на доставку</a></li>
                         </ul>
                     </li>
                     <!-- Dropdown: Документация -->
@@ -171,6 +172,7 @@
                             Задачи
                         </a>
                         <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/employee/warehouseWorker/clientOrders/allClientOrders">Задачи на сборку</a></li>
                             <li><a class="dropdown-item" href="/employee/warehouseWorker/deliveryTasks/allDeliveryTasks">Задачи на погрузку</a></li>
                         </ul>
                     </li>
